--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "the-urlist",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --host 127.0.0.1",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "vue-cli-service build"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.8.1",
     "axios": "^0.18.0",
     "cuid": "^2.1.6",
     "typescript-debounce-decorator": "0.0.17",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
-    "vue-js-modal": "1.3.28",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.6",
     "vue-slicksort": "^1.1.3",
@@ -37,6 +36,8 @@
     "sass-loader": "^7.1.0",
     "typescript": "~3.4.4",
     "vue-template-compiler": "^2.6.10",
-    "vuex-module-decorators": "^0.9.8"
+    "vuex-module-decorators": "^0.9.8",
+    "bulma": "^0.7.5",
+    "@fortawesome/fontawesome-free": "^5.8.1"
   }
 }
