--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "vue-slicksort": "^1.1.3",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.0",
-    "vuex-module-decorators": "^0.9.8"
+    "vuex-module-decorators": "^0.9.8",
+    "@vue/cli-service": "^3.6.0"
   },
   "devDependencies": {
     "@types/vuelidate": "^0.7.5",
     "@vue/cli-plugin-babel": "^3.6.0",
     "@vue/cli-plugin-eslint": "^3.6.0",
     "@vue/cli-plugin-typescript": "^3.6.0",
-    "@vue/cli-service": "^3.6.0",
     "@vue/eslint-config-prettier": "^4.0.1",
     "@vue/eslint-config-typescript": "^4.0.0",
     "babel-eslint": "^10.0.1",
