--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve --host 127.0.0.1",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "postinstall": "vue-cli-service build"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -19,16 +18,17 @@
     "vue-slicksort": "^1.1.3",
     "vuelidate": "^0.7.4",
     "vuex": "^3.1.0",
-    "vuex-module-decorators": "^0.9.8",
-    "@vue/cli-service": "^3.6.0"
+    "vuex-module-decorators": "^0.9.8"
   },
   "devDependencies": {
     "@types/vuelidate": "^0.7.5",
     "@vue/cli-plugin-babel": "^3.6.0",
+    "@vue/cli-service": "^3.6.0",
     "@vue/cli-plugin-eslint": "^3.6.0",
     "@vue/cli-plugin-typescript": "^3.6.0",
     "@vue/eslint-config-prettier": "^4.0.1",
     "@vue/eslint-config-typescript": "^4.0.0",
+    "typescript-eslint-parser": "^22.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.2",
