--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,14 @@
 {
+  "prettier.eslintIntegration": true,
   "workbench.colorCustomizations": {
     "titleBar.activeBackground": "#42b883",
     "titleBar.inactiveBackground": "#42b88399",
     "titleBar.activeForeground": "#fff",
     "titleBar.inactiveForeground": "#15202b99"
-  }
+  },
+  "vetur.format.defaultFormatter.html": "prettier",
+  "vetur.format.defaultFormatter.css": "prettier",
+  "vetur.format.defaultFormatter.scss": "prettier",
+  "vetur.format.defaultFormatter.js": "prettier",
+  "vetur.format.defaultFormatter.ts": "prettier"
 }
