--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,11 @@ node_modules
 dist
 .DS_Store
 
-**/.env.*
+# local env files
+**/.env.local
+**/.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
