--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,10 @@
     {
       "type": "chrome",
       "request": "launch",
-      "name": "Vue.js Chrome Debug",
+      "name": "vuejs: chrome",
       "url": "http://localhost:8080",
       "webRoot": "${workspaceFolder}/src",
+      "breakOnLoad": true,
       "sourceMapPathOverrides": {
         "webpack:///./src/*": "${webRoot}/*"
       }
